# ai-platform-GObase-portfolio

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: go.yml  python.yml  typescript.yml
agent-dashboard/: Dockerfile  README.md  jest.config.js  jest.setup.js  lighthouserc.json  package-lock.json  package.json  pnpm-lock.yaml
agent-dashboard/src/__tests__/: components.test.tsx  hooks.test.ts  types.test.ts  utils.test.ts
agent-dashboard/src/app/: globals.css  layout.tsx  page.tsx
agent-dashboard/src/components/: empty-state.tsx  error-boundary.tsx  providers.tsx
agent-dashboard/src/lib/: api.ts  utils.ts
agent-dashboard/src/types/: index.ts
docs/: api-specification.md  architecture.md  benchmark-report.md  deployment.md
helm/ai-platform/: Chart.yaml  values.yaml
helm/ai-platform/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  dashboard-deployment.yaml  gateway-deployment.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  qdrant-deployment.yaml  rag-deployment.yaml  secrets.yaml  serviceaccount.yaml
k8s/base/: configmap.yaml  dashboard-deployment.yaml  gateway-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  postgres-deployment.yaml  qdrant-deployment.yaml  rag-deployment.yaml  redis-deployment.yaml  secrets.yaml  service-account.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
llm-gateway/: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  go.mod  go.sum
llm-gateway/cmd/gateway/: main.go
llm-gateway/internal/config/: config.go  config_test.go
monitoring/: prometheus.yml
rag-agent/: .env.example  Dockerfile  README.md  pyproject.toml
rag-agent/src/: __init__.py  main.py
rag-agent/src/agents/: __init__.py  base.py  orchestrator.py  rag_agent.py  research_agent.py
rag-agent/src/agents/business/: __init__.py  data_entry_agent.py  report_agent.py  support_triage_agent.py
rag-agent/src/agents/tools/: __init__.py  base.py  data_tools.py  document_tools.py
rag-agent/src/api/: __init__.py  agents.py  chat.py  documents.py
rag-agent/src/core/: __init__.py  config.py  logging.py
rag-agent/src/integrations/: __init__.py  gateway_client.py
rag-agent/src/rag/: __init__.py  chain.py
rag-agent/src/rag/ingestion/: __init__.py  chunker.py  loader.py
rag-agent/src/rag/retrieval/: __init__.py  compressor.py  reranker.py  retriever.py  vector_store.py
rag-agent/tests/: __init__.py  conftest.py  test_api.py  test_chunker.py  test_compressor.py  test_gateway_client.py  test_orchestrator.py  test_reranker.py  test_retriever.py  test_vector_store.py
scripts/: demo.sh  init-db.sql
(+66 files in other folders)
